[package]
name = "tlg"
version = "0.2.0"
description = "Tools to process TLG image file."
edition = "2024"
license = "MIT"
repository = "https://github.com/lifegpc/libtlg-rs"

[features]
default = ["encode"]
encode = ["libtlg-rs/encode"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libtlg-rs = { path = "../libtlg-rs" }
png = "0.17"
